...
                        Spacer()

                        ProfileCard(isProfileCompleted: true)
                            .onTapGesture {
                                isSettingsPresented = true
                            }
                            .accessibilityIdentifier("home_profile_button")
                    }
                    .padding(.bottom, 24)
                    .frame(maxWidth: .infinity)

                    // Food Notes & Allergy Summary...
                    GeometryReader { geometry in
...
                    onChatBotTap: {
                        coordinator.showAIBotSheet()
                    }
                )
            }
            .background(Color.pageBackground)
            .accessibilityIdentifier("home_view")
            //            .padding(.top , 16)
            //            .background(Color.red)
            
            
            // ------------ COORDINATED INITIAL LOAD ------------
                .task {
...
