appId: llc.fungee.ingredicheck
tags: [product, favorite]
---
- runFlow: ../../subflows/launch/product_detail_favorited.yaml
- extendedWaitUntil:
    visible:
      id: product_detail_view
    timeout: 30000
- assertVisible:
    text: Oreo Original
- tapOn:
    id: product_detail_favorite_button
