appId: llc.fungee.ingredicheck
tags: [permissions]
---
- runFlow: ../../subflows/launch/permissions.yaml
- extendedWaitUntil:
    visible:
      text: Why we need these permissions
    timeout: 30000
- tapOn:
    id: permissions_signin_toggle
- extendedWaitUntil:
    visible:
      id: login_to_continue_view
    timeout: 30000
- assertVisible:
    text: Google
