appId: llc.fungee.ingredicheck
tags: [auth]
---
- runFlow: ../../subflows/launch/auth_google.yaml
- extendedWaitUntil:
    visible:
      id: sign_in_sheet
    timeout: 30000
- tapOn: Google
- extendedWaitUntil:
    visible:
      id: home_view
    timeout: 30000
- assertVisible:
    id: home_profile_button
